--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,9 @@
+#
+# Copyright (c) 2023. Created by alexsander at 12/22. All rights reserved.
+# GitHub: https://github.com/alexsanderfer/
+# Portfolio: https://alexsanderfer.netlify.app/
+#
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
