--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,9 @@
+#
+# Copyright (c) 2023. Created by alexsander at 12/22. All rights reserved.
+# GitHub: https://github.com/alexsanderfer/
+# Portfolio: https://alexsanderfer.netlify.app/
+#
+
 #Wed Dec 20 21:32:02 WET 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
